# openmm-reaxff

./: CMakeLists.txt  README.md
plugins/reaxff/: CMakeLists.txt
plugins/reaxff/examples/: 2_7xf7-protein-and-fragments.ipynb
plugins/reaxff/openmmapi/include/: OpenMMReaxFF.h
plugins/reaxff/openmmapi/include/openmm/: CentroidSphericalPotentialForce.h  ReaxffForce.h
plugins/reaxff/openmmapi/include/openmm/internal/: CentroidSphericalPotentialForceImpl.h  PuremdInterface.h  ReaxffForceImpl.h  ReaxffHelpers.h  windowsExportReaxff.h
plugins/reaxff/openmmapi/src/: CentroidSphericalPotentialForce.cpp  CentroidSphericalPotentialForceImpl.cpp  PuremdInterface.cpp  ReaxffForce.cpp  ReaxffForceImpl.cpp  ReaxffHelpers.cpp
plugins/reaxff/reaxff_puremd/PuReMD/: CMakeLists.txt
plugins/reaxff/reaxff_puremd/PuReMD/sPuReMD/src/: spuremd.c  spuremd.h
plugins/reaxff/tests/: TestReaxffForce.cpp
wrappers/python/: CMakeLists.txt  setup.py
wrappers/python/src/swig_doxygen/: OpenMM.i
wrappers/python/src/swig_doxygen/doxygen/: Doxyfile.in
